--- a/styles.css
+++ b/styles.css
@@ -2,17 +2,37 @@
     margin: 0;
     padding: 0;
     font-family: "Roboto Mono";
+}
+nav{
+    background-color: #ffffffa1;
+    position: fixed;
+    width: 100%;
+    color: #000;
 }       
+nav ul{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+nav ul img{
+    width: 150px;
+}
+nav ul h2{
+    font-size: 3em;
+}
+li{
+    list-style: none;
+}
 .fondo{
     width: 100%;
     height: 100%;
     background: url(img/bg.gif) no-repeat center;
     background-size: cover;
-    position: fixed;
     z-index:-1;
     display: flex;
     justify-content: center;
     align-items: center;
+    position: fixed;
 }
 header{
     width: fit-content;
@@ -72,6 +92,12 @@ input::placeholder{
         color: #000;
         border: 1px solid #ffff;
         height: 2em;
+    }
+    h2{
+        display: none;
+    }
+    nav ul{
+        justify-content: center;
     }
 }
 @media (max-width: 460px){
